[gd_scene load_steps=11 format=3 uid="uid://cigag10q03kqt"]

[ext_resource type="Script" path="res://player.gd" id="1_6oqtn"]
[ext_resource type="Texture2D" uid="uid://uvklulx8ks1l" path="res://icon.svg" id="2_4akqg"]
[ext_resource type="Script" path="res://state_manager.gd" id="3_2sdy3"]
[ext_resource type="Texture2D" uid="uid://dqr5lusyidd6a" path="res://Untitled.png" id="3_s1ru8"]
[ext_resource type="Script" path="res://wall.gd" id="4_ram0d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qkbnq"]
size = Vector2(59, 57)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sducu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_olknf"]
size = Vector2(120, 117)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itbib"]
size = Vector2(72, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_amwtb"]
size = Vector2(163, 28)

[node name="GameNode" type="Node2D"]
position = Vector2(491, 320)
script = ExtResource("3_2sdy3")

[node name="UI" type="Control" parent="."]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GoalLabel" type="Label" parent="UI"]
z_index = 100
offset_left = -12.0
offset_top = -8.0
offset_right = 93.0
offset_bottom = 15.0
scale = Vector2(2.81415, 2.6626)
text = "GoalLabel"

[node name="PositionLabel" type="Label" parent="UI"]
z_as_relative = false
layout_mode = 0
offset_left = -470.0
offset_top = -288.0
offset_right = -424.0
offset_bottom = -265.0
text = "PositionLabel"

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(112, 192)
scale = Vector2(0.785124, 0.791139)
script = ExtResource("1_6oqtn")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(19.5, 18.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4akqg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(19.5, 18.5)
shape = SubResource("RectangleShape2D_qkbnq")

[node name="Wall_has_1exit" type="Node2D" parent="."]
visible = false
z_index = 1
position = Vector2(-251, -382)
script = ExtResource("4_ram0d")
metadata/_edit_group_ = true

[node name="block" type="StaticBody2D" parent="Wall_has_1exit"]
position = Vector2(283, 135)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_1exit/block"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_1exit/block"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block2" type="StaticBody2D" parent="Wall_has_1exit"]
position = Vector2(211, 258)
scale = Vector2(0.966795, 0.968305)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_1exit/block2"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_1exit/block2"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block3" type="StaticBody2D" parent="Wall_has_1exit"]
position = Vector2(480, 131)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_1exit/block3"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_1exit/block3"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block4" type="StaticBody2D" parent="Wall_has_1exit"]
position = Vector2(549, 260)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_1exit/block4"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_1exit/block4"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="door0" type="Area2D" parent="Wall_has_1exit"]
position = Vector2(382.5, 103)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_1exit/door0"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_itbib")

[node name="block6" type="StaticBody2D" parent="Wall_has_1exit"]
position = Vector2(210, 522)
scale = Vector2(0.966795, 3.36831)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_1exit/block6"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_1exit/block6"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block7" type="StaticBody2D" parent="Wall_has_1exit"]
position = Vector2(547, 523)
scale = Vector2(0.966795, 3.36831)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_1exit/block7"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_1exit/block7"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block8" type="StaticBody2D" parent="Wall_has_1exit"]
position = Vector2(773, 386)
scale = Vector2(4.09619, 4.97665)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_1exit/block8"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_1exit/block8"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block9" type="StaticBody2D" parent="Wall_has_1exit"]
position = Vector2(-35, 440)
scale = Vector2(4.09619, 4.97665)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_1exit/block9"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_1exit/block9"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="Wall_has_2exit" type="Node2D" parent="."]
visible = false
z_index = 1
position = Vector2(-363, -382)
script = ExtResource("4_ram0d")
metadata/_edit_group_ = true

[node name="block" type="StaticBody2D" parent="Wall_has_2exit"]
position = Vector2(283, 135)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_2exit/block"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_2exit/block"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block2" type="StaticBody2D" parent="Wall_has_2exit"]
position = Vector2(211, 258)
scale = Vector2(0.966795, 0.968305)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_2exit/block2"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_2exit/block2"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block3" type="StaticBody2D" parent="Wall_has_2exit"]
position = Vector2(678, 135)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_2exit/block3"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_2exit/block3"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="blockn" type="StaticBody2D" parent="Wall_has_2exit"]
position = Vector2(481, 135)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_2exit/blockn"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_2exit/blockn"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block4" type="StaticBody2D" parent="Wall_has_2exit"]
position = Vector2(747, 260)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_2exit/block4"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_2exit/block4"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="door0" type="Area2D" parent="Wall_has_2exit"]
position = Vector2(382.5, 103)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_2exit/door0"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_itbib")

[node name="door1" type="Area2D" parent="Wall_has_2exit"]
position = Vector2(581, 102)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_2exit/door1"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_itbib")

[node name="block8" type="StaticBody2D" parent="Wall_has_2exit"]
position = Vector2(949, 391)
scale = Vector2(4.09619, 4.97665)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_2exit/block8"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_2exit/block8"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block9" type="StaticBody2D" parent="Wall_has_2exit"]
position = Vector2(7.00006, 448)
scale = Vector2(4.09619, 4.97665)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_2exit/block9"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_2exit/block9"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="TurningBackDoor" type="Area2D" parent="."]
visible = false
position = Vector2(32, 322)
scale = Vector2(1.32149, 1.06418)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurningBackDoor"]
position = Vector2(71.5, 4)
shape = SubResource("RectangleShape2D_amwtb")

[node name="Wall_has_0exit" type="Node2D" parent="."]
visible = false
z_index = 1
position = Vector2(-251, -382)
script = ExtResource("4_ram0d")
metadata/_edit_group_ = true

[node name="block" type="StaticBody2D" parent="Wall_has_0exit"]
position = Vector2(283, 135)
scale = Vector2(1.68, 1)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_0exit/block"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_0exit/block"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block2" type="StaticBody2D" parent="Wall_has_0exit"]
position = Vector2(211, 258)
scale = Vector2(0.966795, 0.968305)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_0exit/block2"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_0exit/block2"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block3" type="StaticBody2D" parent="Wall_has_0exit"]
position = Vector2(480, 131)
scale = Vector2(1.44, 1)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_0exit/block3"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_0exit/block3"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block4" type="StaticBody2D" parent="Wall_has_0exit"]
position = Vector2(549, 260)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_0exit/block4"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_0exit/block4"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block6" type="StaticBody2D" parent="Wall_has_0exit"]
position = Vector2(210, 522)
scale = Vector2(0.966795, 3.36831)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_0exit/block6"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_0exit/block6"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block7" type="StaticBody2D" parent="Wall_has_0exit"]
position = Vector2(547, 523)
scale = Vector2(0.966795, 3.36831)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_0exit/block7"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_0exit/block7"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block8" type="StaticBody2D" parent="Wall_has_0exit"]
position = Vector2(773, 386)
scale = Vector2(4.09619, 4.97665)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_0exit/block8"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_0exit/block8"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block9" type="StaticBody2D" parent="Wall_has_0exit"]
position = Vector2(-42, 436)
scale = Vector2(4.09619, 4.73123)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_0exit/block9"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_0exit/block9"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="Wall_has_3exit" type="Node2D" parent="."]
visible = false
z_index = 1
position = Vector2(-455, -383)
script = ExtResource("4_ram0d")
metadata/_edit_group_ = true

[node name="block" type="StaticBody2D" parent="Wall_has_3exit"]
position = Vector2(283, 135)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_3exit/block"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/block"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block2" type="StaticBody2D" parent="Wall_has_3exit"]
position = Vector2(211, 258)
scale = Vector2(0.966795, 0.968305)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_3exit/block2"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/block2"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block3" type="StaticBody2D" parent="Wall_has_3exit"]
position = Vector2(678, 135)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_3exit/block3"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/block3"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="blockn" type="StaticBody2D" parent="Wall_has_3exit"]
position = Vector2(481, 135)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_3exit/blockn"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/blockn"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block4" type="StaticBody2D" parent="Wall_has_3exit"]
position = Vector2(880, 135)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_3exit/block4"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/block4"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="door0" type="Area2D" parent="Wall_has_3exit"]
position = Vector2(382.5, 103)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/door0"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_itbib")

[node name="door1" type="Area2D" parent="Wall_has_3exit"]
position = Vector2(581, 102)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/door1"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_itbib")

[node name="door2" type="Area2D" parent="Wall_has_3exit"]
position = Vector2(778, 103)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/door2"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_itbib")

[node name="block8" type="StaticBody2D" parent="Wall_has_3exit"]
position = Vector2(1203, 391)
scale = Vector2(4.09619, 4.97665)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_3exit/block8"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/block8"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[node name="block9" type="StaticBody2D" parent="Wall_has_3exit"]
position = Vector2(10, 450)
scale = Vector2(4.09619, 4.97665)
physics_material_override = SubResource("PhysicsMaterial_sducu")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Wall_has_3exit/block9"]
texture = ExtResource("3_s1ru8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall_has_3exit/block9"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_olknf")

[connection signal="body_entered" from="Wall_has_1exit/door0" to="Wall_has_1exit" method="_on_door_entered" binds= [0]]
[connection signal="body_entered" from="Wall_has_2exit/door0" to="Wall_has_2exit" method="_on_door_entered" binds= [0]]
[connection signal="body_entered" from="Wall_has_2exit/door1" to="Wall_has_2exit" method="_on_door_entered" binds= [1]]
[connection signal="body_entered" from="TurningBackDoor" to="." method="_on_turning_back_door_body_entered"]
[connection signal="body_entered" from="Wall_has_3exit/door0" to="Wall_has_3exit" method="_on_door_entered" binds= [0]]
[connection signal="body_entered" from="Wall_has_3exit/door1" to="Wall_has_3exit" method="_on_door_entered" binds= [1]]
[connection signal="body_entered" from="Wall_has_3exit/door2" to="Wall_has_2exit" method="_on_door_entered" binds= [2]]
